// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IDP Button transformer tests should add Fastpass button when exists in remediation 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "label": "oktaVerify.button",
        "options": {
          "challengeMethod": undefined,
          "deviceChallengeUrl": undefined,
          "step": "launch-authenticator",
        },
        "type": "LaunchAuthenticatorButton",
      },
      {
        "options": {
          "text": "socialauth.divider.text",
        },
        "type": "Divider",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Button transformer tests should add PIV/CAC IDP button when exists in remediation with SECONDARY display 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "text": "socialauth.divider.text",
        },
        "type": "Divider",
      },
      {
        "label": "piv.cac.card",
        "options": {
          "Icon": "MockSVGIcon",
          "dataSe": "piv-card-button",
          "iconAlt": "piv.card",
          "onClick": [Function],
          "showLoading": false,
          "step": "piv-idp",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Button transformer tests should add PIV/CAC IDP button when exists in remediation with default (PRIMARY) display 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "label": "piv.cac.card",
        "options": {
          "Icon": "MockSVGIcon",
          "dataSe": "piv-card-button",
          "iconAlt": "piv.card",
          "onClick": [Function],
          "showLoading": false,
          "step": "piv-idp",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "options": {
          "text": "socialauth.divider.text",
        },
        "type": "Divider",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Button transformer tests should not add PIV IDP button when PIV does not exist in remediation but Identify does 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`IDP Button transformer tests should not add PIV IDP button when PIV remediation exists but identify does not 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
